// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete workflow common handler process method should delete a workflow using workflow name 1`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [
    {
      "workflowKey": "fake-workflow-key",
      "workflowName": "fake-name",
    },
  ],
}
`;

exports[`Delete workflow common handler process method should fail when deletion with workflow name fails fails 1`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [],
}
`;

exports[`Delete workflow common handler process method should fail when deletion with workflow name fails fails 2`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [
    {
      "workflowKey": "fake-workflow-key",
      "workflowName": "fake-name",
    },
  ],
}
`;
